Tests/Suite8.out
a.out 1 of 1 tests passed.
foo.c: In function ‘main’:
foo.c:7: error: ‘This’ undeclared (first use in this function)
foo.c:7: error: (Each undeclared identifier is reported only once
foo.c:7: error: for each function it appears in.)
foo.c:7: error: expected ‘;’ before ‘Is’
Failed: gcc foo.c -o b.out
c.out 1 of 1 tests passed.
